# oysterpack-smart-near

./: .gitignore  LICENSE  README.md
apps/oysterpack-smart-stake-factory-app/: README.md  package-lock.json  package.json
apps/oysterpack-smart-stake-factory-app/src/: index.js  manifest.json  template.html
apps/oysterpack-smart-stake-factory-app/src/components/header/: index.js
apps/oysterpack-smart-stake-factory-app/src/routes/home/: index.js
docs/: DEV.md  guildnet.md  near.md  stake-near-cli-guildnet.md  stake-near-cli.md  validator.md
near/: Cargo.toml  Makefile.toml  testnet.env
near/.cargo/: config.toml
near/oysterpack-smart-account-management/: Cargo.toml  Makefile.toml
near/oysterpack-smart-account-management/src/: account_manager.rs  components.rs  domain.rs  interface.rs  lib.rs  services.rs
near/oysterpack-smart-account-management/src/components/: account_management.rs  account_repository.rs  account_service.rs  account_storage_usage.rs
near/oysterpack-smart-account-management/src/domain/: account.rs  account_data.rs  account_id_hash.rs  account_metrics.rs  account_near_data.rs  account_stats.rs  account_storage_event.rs  account_storage_usage_event.rs  contract_permissions.rs  permissions.rs  storage_balance.rs  storage_balance_bounds.rs  storage_management_event.rs  storage_usage_bounds.rs
near/oysterpack-smart-account-management/src/interface/: access_control.rs  account_management.rs  account_metrics.rs  account_registry.rs  account_reporting.rs  account_repository.rs  account_service.rs  account_storage_usage.rs  account_tracking.rs  contract.rs  storage_management.rs  storage_managment.rs
near/oysterpack-smart-account-management/src/interface/contract/: access_control.rs  account_storage_usage.rs  storage_management.rs
near/oysterpack-smart-account-management/src/services/: account_service.rs
near/oysterpack-smart-account-management/tests/: enum_flags_test.rs  quick_test.rs  serde_json_test.rs
near/oysterpack-smart-account-registry/: Cargo.toml
near/oysterpack-smart-contract/: Cargo.toml
near/oysterpack-smart-contract/src/: components.rs  domain.rs  interface.rs
near/oysterpack-smart-contract/src/components/: contract_metrics.rs  contract_operator.rs  contract_ownership.rs  contract_sale.rs  multi_user_contract.rs
near/oysterpack-smart-contract/src/domain/: contract_bid.rs  contract_near_balances.rs  contract_owner.rs  contract_storage_usage.rs  contract_storage_usage_costs.rs
near/oysterpack-smart-contract/src/interface/: access_control.rs  contract.rs  contract_metrics.rs  contract_ownership.rs  contract_sale.rs  multi_account_contract.rs  multi_user_contract.rs
near/oysterpack-smart-contract/src/interface/contract/: contract_metrics.rs  contract_operator.rs  contract_ownership.rs  contract_sale.rs
near/oysterpack-smart-fungible-token/: Cargo.toml
near/oysterpack-smart-fungible-token/src/: domain.rs  interface.rs  lib.rs
near/oysterpack-smart-fungible-token/src/components/: fungible_token.rs
near/oysterpack-smart-fungible-token/src/domain/: memo.rs  metadata.rs  token_amount.rs  transfer_call_message.rs
near/oysterpack-smart-fungible-token/src/interface/: contract.rs  fungible_token.rs  metadata.rs  token_service.rs  transfer_receiver.rs
near/oysterpack-smart-fungible-token/src/interface/contract/: fungible_token.rs  metadata.rs  operator.rs
near/oysterpack-smart-near/: Cargo.toml  Makefile.toml
near/oysterpack-smart-near-test/: Cargo.toml
near/oysterpack-smart-near-test/src/: lib.rs
near/oysterpack-smart-near/src/: component.rs  contract_context.rs  core.rs  data.rs  domain.rs  functions.rs  lib.rs  model.rs  service.rs
near/oysterpack-smart-near/src/component/: component.rs  deploy.rs  manages_account_data.rs  service.rs
near/oysterpack-smart-near/src/core/: asserts.rs  errors.rs  eventbus.rs  hash.rs  log_events.rs  promise.rs
near/oysterpack-smart-near/src/data/: data_collection.rs  numbers.rs  object.rs
near/oysterpack-smart-near/src/data/numbers/: n_u128.rs  n_u64.rs
near/oysterpack-smart-near/src/domain/: account_id_hash.rs  basis_points.rs  block_height.rs  block_time.rs  block_timestamp.rs  epoch_height.rs  expiration.rs  gas.rs  public_key.rs  storage_usage.rs  storage_usage_change.rs  tgas.rs  yocto_near.rs
near/oysterpack-smart-near/src/model/: yocto_near.rs
near/oysterpack-smart-near/tests/: quick_test.rs
near/oysterpack-smart-stake/: Cargo.toml  Makefile.toml
near/oysterpack-smart-stake-factory/: Cargo.toml  Makefile.toml
near/oysterpack-smart-stake-factory/src/: lib.rs
near/oysterpack-smart-stake/src/: access_control.rs  account_metrics.rs  account_storage_usage.rs  components.rs  context.rs  contract_metrics.rs  contract_operator.rs  contract_ownership.rs  contract_sale.rs  functions.rs  fungible_token.rs  lib.rs  staking_pool.rs  storage_management.rs
near/oysterpack-smart-staking-pool/: Cargo.toml
near/oysterpack-smart-staking-pool/src/: components.rs  domain.rs  interface.rs  lib.rs
near/oysterpack-smart-staking-pool/src/components/: staking_pool.rs
near/oysterpack-smart-staking-pool/src/domain/: fees.rs  stake_account.rs  stake_account_balance.rs  stake_account_balances.rs  staking_pool_balances.rs  status.rs  treasury.rs  unstaked_balance.rs  unstaked_balances.rs
near/oysterpack-smart-staking-pool/src/interface/: contract.rs  staking_pool.rs
near/oysterpack-smart-staking-pool/src/interface/contract/: near_staking_pool.rs  operator.rs  owner.rs  stake_action_callback.rs  stake_action_callbacks.rs  staking_pool.rs  treasury.rs
near/oysterpack-smart-staking-pool/tests/: quick_test.rs
near/oysterpack-smart-tools/: Cargo.toml
tests/oysterpack-smart-stake-tests/: README.md  package-lock.json  package.json
tests/oysterpack-smart-stake-tests/src/: manifest.json
tests/oysterpack-smart-stake-tests/tests/: config.js
