[package]
name = "oysterpack-smart-account-management"
version = "0.1.0"
authors = ["oysterpack.inc <oysterpack.inc@gmail.com>"]
edition = "2018"

[dependencies]
near-sdk = "=3.0.0-pre.2"
oysterpack-smart-near = {path = "../oysterpack-smart-near"}
shaku = {version = "0.6.1", default-features = false, features= ["derive"]}
lazy_static = "1.4.0"

[dev-dependencies]
oysterpack-smart-near-test = { path = "../oysterpack-smart-near-test" }