[package]
name = "oysterpack-smart-account-management"
version = "0.1.0"
authors = ["oysterpack.inc <oysterpack.inc@gmail.com>"]
edition = "2018"

[dependencies]
oysterpack-smart-near = { path = "../oysterpack-smart-near" }
lazy_static = "1.4.0"

[dev-dependencies]
oysterpack-smart-near-test = { path = "../oysterpack-smart-near-test" }
enumflags2 = "0.7.1"