[package]
name = "oysterpack-smart-account-registry"
version = "0.1.0"
authors = ["oysterpack.inc <oysterpack.inc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-sdk = "3.0.0-pre.2"
oysterpack-smart-near = {path = "../oysterpack-smart-near"}