[package]
name = "oysterpack-smart-contract"
version = "0.1.0"
authors = ["oysterpack.inc <oysterpack.inc@gmail.com>"]
edition = "2018"

[dependencies]
near-sdk = "=3.0.0-pre.2"
oysterpack-smart-near = { path = "../oysterpack-smart-near" }
oysterpack-smart-account-management = { path = "../oysterpack-smart-account-management" }
lazy_static = "1.4.0"
teloc = "0.1.0"
enumflags2 = "0.7.1"

[dev-dependencies]
oysterpack-smart-near-test = { path = "../oysterpack-smart-near-test" }