[package]
name = "oysterpack-smart-fungible-token"
version = "0.1.0"
authors = ["oysterpack.inc <oysterpack.inc@gmail.com>"]
edition = "2018"


[dependencies]
near-sdk = "=3.0.0-pre.2"
oysterpack-smart-near = { path = "../oysterpack-smart-near" }
oysterpack-smart-account-management = { path = "../oysterpack-smart-account-management" }