[package]
name = "oysterpack-smart-fungible-token"
version = "0.1.0"
authors = ["oysterpack.inc <oysterpack.inc@gmail.com>"]
edition = "2018"

[dependencies]
oysterpack-smart-near = { path = "../oysterpack-smart-near" }
oysterpack-smart-account-management = { path = "../oysterpack-smart-account-management" }

[dev-dependencies]
oysterpack-smart-near-test = { path = "../oysterpack-smart-near-test" }