[package]
name = "oysterpack-smart-near-test"
version = "0.1.0"
authors = ["oysterpack.inc <2zP6OaymGZhJTHFvQMzp6Ze>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-sdk = "3.0.0-pre.2"
near-vm-logic = "3.0.0"
oysterpack-smart-near = {path = "../oysterpack-smart-near"}