[package]
name = "oysterpack-smart-near"
version = "0.1.0"
authors = ["OysterPack Inc <oysterpack.inc@gmail.com>"]
edition = "2018"

[dependencies]
near-sdk = "=3.0.0-pre.2"
uint = { version = "0.9.0", default-features = false }
teloc = "0.1.0"
lazy_static = "1.4.0"
crypto_box = "0.5.0"

[dev-dependencies]
oysterpack-smart-near-test = { path = "../oysterpack-smart-near-test" }
regex = "1.4.3"
