[package]
name = "oysterpack-smart-near"
version = "0.1.0"
authors = ["OysterPack Inc <oysterpack.inc@gmail.com>"]
edition = "2018"

[dependencies]
near-sdk = "3"
uint = { version = "0.9.0", default-features = false }
base64 = "0.13.0"
lazy_static = "1.4.0"

[dev-dependencies]
oysterpack-smart-near-test = { path = "../oysterpack-smart-near-test" }
regex = "1.4.3"
