[package]
name = "oysterpack-smart-stake"
version = "0.1.0"
authors = ["OysterPack Inc <oysterpack.inc@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "=3.0.0-pre.2"
shaku = {version = "0.6.1", default-features = false, features= ["derive"]}
oysterpack-smart-near = {path = "../oysterpack-smart-near"}
oysterpack-smart-account-management = {path = "../oysterpack-smart-account-management"}

[dev-dependencies]
oysterpack-smart-near-test = {path = "../oysterpack-smart-near-test"}