[package]
name = "oysterpack-smart-stake"
version = "0.1.0"
authors = ["OysterPack Inc <oysterpack.inc@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "=3.0.0-pre.2"
teloc = "0.1.0"
oysterpack-smart-near = {path = "../oysterpack-smart-near"}
oysterpack-smart-contract = {path = "../oysterpack-smart-contract"}
oysterpack-smart-account-management = {path = "../oysterpack-smart-account-management"}

[dev-dependencies]
oysterpack-smart-near-test = {path = "../oysterpack-smart-near-test"}