[package]
name = "oysterpack-smart-stake"
version = "0.1.0"
authors = ["OysterPack Inc <oysterpack.inc@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
oysterpack-smart-near = {path = "../oysterpack-smart-near"}
oysterpack-smart-contract = {path = "../oysterpack-smart-contract"}
oysterpack-smart-account-management = {path = "../oysterpack-smart-account-management"}
oysterpack-smart-fungible-token = {path = "../oysterpack-smart-fungible-token"}

near-sdk = "=3.0.1-pre.1"
teloc = "0.1.0"

[dev-dependencies]
oysterpack-smart-near-test = {path = "../oysterpack-smart-near-test"}