[package]
name = "oysterpack-smart-staking-pool"
version = "0.1.0"
authors = ["oysterpack.inc <oysterpack.inc@gmail.com>"]
edition = "2018"

[dependencies]
oysterpack-smart-near = { path = "../oysterpack-smart-near" }
oysterpack-smart-account-management = { path = "../oysterpack-smart-account-management" }
oysterpack-smart-contract = { path = "../oysterpack-smart-contract" }
oysterpack-smart-fungible-token = { path = "../oysterpack-smart-fungible-token" }

[dev-dependencies]
oysterpack-smart-near-test = { path = "../oysterpack-smart-near-test" }
bs58 = "0.4.0"
